Prevent tooltip overflow from omnicard buttons (an issue in mobile mode)

--- a/client/stylesheets/containers/_omnicard.scss
+++ b/client/stylesheets/containers/_omnicard.scss
@@ -5,6 +5,7 @@
   left: 0;
   margin-left: 8px;
   margin-right: 8px;
+  overflow: hidden;
 
   @media #{$md-mobile-media} {
     right: 0;
